force-app/main/default/objects/plan_child__c/plan_child__c.object-meta.xml
<CustomObject>
    <label>planchild</label>
    <nameField>
        <label>plan child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>planchilds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>