force-app/main/default/objects/plan_child__c/fields/plan__c.field-meta.xml
<CustomField>
    <fullName>plan__c</fullName>
    <label>plan</label>
    <referenceTo>plan__c</referenceTo>
    <relationshipLabel>planchilds</relationshipLabel>
    <relationshipName>planchilds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>