force-app/main/default/objects/plan_child__c/fields/Quater__c.field-meta.xml
<CustomField>
    <fullName>Quater__c</fullName>
    <label>Quater</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>