force-app/main/default/objects/plan_child__c/fields/Quater_start_date__c.field-meta.xml
<CustomField>
    <fullName>Quater_start_date__c</fullName>
    <formula>CASE( Quater__c   , &quot;Q1&quot;, DATE(IF((MONTH((plan__r.plan_date__c))+3)&gt;12,YEAR(plan__r.plan_date__c)+1,YEAR(plan__r.plan_date__c)),IF((MONTH((plan__r.plan_date__c ))+3)&gt;12, (MONTH((plan__r.plan_date__c ))+3)-12, MONTH((plan__r.plan_date__c ))+3 ),1),&quot;Q2&quot;, DATE(IF((MONTH((plan__r.plan_date__c))+3)&gt;12,YEAR(plan__r.plan_date__c)+1,YEAR(plan__r.plan_date__c)),IF((MONTH((plan__r.plan_date__c ))+3)&gt;12, (MONTH((plan__r.plan_date__c ))+3)-12, MONTH((plan__r.plan_date__c ))+3) ,1), &quot;Q3&quot;, DATE(IF((MONTH((plan__r.plan_date__c))+6)&gt;12,YEAR(plan__r.plan_date__c)+1,YEAR(plan__r.plan_date__c)),IF((MONTH((plan__r.plan_date__c ))+6)&gt;12, (MONTH((plan__r.plan_date__c ))+6)-12, MONTH((plan__r.plan_date__c ))+6) ,1),&quot;Q4&quot;,DATE(IF((MONTH((plan__r.plan_date__c))+9)&gt;12,YEAR(plan__r.plan_date__c)+1,YEAR(plan__r.plan_date__c)),IF((MONTH((plan__r.plan_date__c ))+3)&gt;12, (MONTH((plan__r.plan_date__c ))+9)-12, MONTH((plan__r.plan_date__c ))+9) ,1),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quater start date</label>
    <type>Date</type>
</CustomField>